Get rid of height to prevent distortion

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,8 +114,7 @@ footer {
 }
 
 #patrick-street {
-    height: 80vh;
-    object-fit: cover;
+    background-size: cover;
 }
 
 #homepage h2 {
